--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,8 +38,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 34
         versionCode 356
-        versionName "1.84.0"
-//        getVersionProperty("VERSION_LONG")
+        versionName getVersionProperty("VERSION_LONG")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // This setting, which defaults to 'true', will cause Tailscale to fall
@@ -98,10 +97,6 @@ android {
             proguardFiles getDefaultProguardFile(
                     'proguard-android-optimize.txt'),
                     'proguard-rules.pro'
-        }
-        release_tv {
-            initWith release
-            manifestPlaceholders.leanbackRequired = true
         }
     }
 
@@ -187,11 +182,11 @@ def getLocalProperty(key, defaultValue) {
 }
 
 
-//def getVersionProperty(key) {
-//    // tailscale.version is created / updated by the makefile, it is in a loosely
-//    // Makfile/envfile format, which is also loosely a properties file format.
-//    //      make tailscale.version
-//    def versionProps = new Properties()
-//    versionProps.load(project.file('../tailscale.version').newDataInputStream())
-//    return versionProps.getProperty(key).replaceAll('^\"|\"$', '')
-//}
+def getVersionProperty(key) {
+    // tailscale.version is created / updated by the makefile, it is in a loosely
+    // Makfile/envfile format, which is also loosely a properties file format.
+    //      make tailscale.version
+    def versionProps = new Properties()
+    versionProps.load(project.file('../tailscale.version').newDataInputStream())
+    return versionProps.getProperty(key).replaceAll('^\"|\"$', '')
+}
