--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,139 +15,74 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     if: ${{ !contains(github.event.head_commit.message, '[ci skip]') }}
-
     steps:
       - name: Check out code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
+        uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-      - name: Switch to Java 17 # Note: 17 is pre-installed on ubuntu-latest
-        uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 # v4.7.0
+      - name: Switch to Java 17
+        uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "17"
-
-      # Clean should essentially be a no-op, but make sure that it works.
       - name: Clean
         run: make clean
 
+      # Build APKs
       - name: Build Debug APK
-        if: ${{ github.event_name == 'pull_request' || github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
         run: make tailscale-debug.apk
-
       - name: Build Release APK
-        if: ${{ github.event_name != 'pull_request' && github.ref != 'refs/heads/main' }}
+        if: ${{ github.ref != 'refs/heads/main' && github.event_name != 'pull_request' }}
         run: make tailscale-release.apk
 
       - name: Run tests
         run: make test
 
-      - name: Upload Debug APK
-        if: ${{ github.event_name == 'pull_request' || github.ref == 'refs/heads/main' }}
+      # Upload artifacts for debugging (optional, can be removed if not needed)
+      - name: Upload Debug APK Artifact
+        if: ${{ github.ref == 'refs/heads/main' || github.event_name == 'pull_request' }}
         uses: actions/upload-artifact@v4
         with:
-          name: debug-apk-${{ github.sha }}
-          path: "tailscale-debug.apk"
+          name: debug-apk
+          path: tailscale-debug.apk
+          retention-days: 7
+      - name: Upload Release APK Artifact
+        if: ${{ github.ref != 'refs/heads/main' && github.event_name != 'pull_request' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: tailscale-release.apk
           retention-days: 30
 
-      - name: Upload Release APK
-        if: ${{ github.event_name != 'pull_request' && github.ref != 'refs/heads/main' }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-apk-${{ github.sha }}
-          path: "tailscale-release.apk"
-          retention-days: 90
-
+      # Get version info for release APK
       - name: Get version info
+        if: ${{ github.ref != 'refs/heads/main' && github.event_name != 'pull_request' }}
         id: version
         run: |
-          VERSION=$(make version | head -n 1)
+          VERSION=$(grep VERSION_LONG tailscale.version | cut -d'=' -f2 | tr -d '"')
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "short_sha=${GITHUB_SHA:0:7}" >> $GITHUB_OUTPUT
 
+      # Upload Debug APK to GitHub Packages (main branch only, always as latest)
       - name: Upload Debug APK to GitHub Packages
-        if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/main' && github.event_name != 'pull_request' }}
         run: |
-          APK_PATH="tailscale-debug.apk"
-          VERSION="${{ steps.version.outputs.version }}-debug-${{ steps.version.outputs.short_sha }}"
-          
-          # Upload APK as a generic package
           curl -X PUT \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/vnd.android.package-archive" \
-            --data-binary @"${APK_PATH}" \
-            "https://maven.pkg.github.com/${{ github.repository }}/com/tailscale/ipn/tailscale-debug/${VERSION}/tailscale-debug-${VERSION}.apk"
+            --data-binary @tailscale-debug.apk \
+            "https://maven.pkg.github.com/${{ github.repository }}/com/tailscale/ipn/tailscale-debug/latest/tailscale-debug.apk"
 
+      # Upload Release APK to GitHub Packages (other branches, with version)
       - name: Upload Release APK to GitHub Packages
-        if: ${{ github.event_name != 'pull_request' && github.ref != 'refs/heads/main' }}
+        if: ${{ github.ref != 'refs/heads/main' && github.event_name != 'pull_request' }}
         run: |
-          APK_PATH="tailscale-release.apk"
           VERSION="${{ steps.version.outputs.version }}-${{ steps.version.outputs.short_sha }}"
-          
-          # Upload APK as a generic package
           curl -X PUT \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/vnd.android.package-archive" \
-            --data-binary @"${APK_PATH}" \
+            --data-binary @tailscale-release.apk \
             "https://maven.pkg.github.com/${{ github.repository }}/com/tailscale/ipn/tailscale-release/${VERSION}/tailscale-release-${VERSION}.apk"
-
-      - name: Create Package Metadata for Debug APK
-        if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
-        run: |
-          VERSION="${{ steps.version.outputs.version }}-debug-${{ steps.version.outputs.short_sha }}"
-          
-          # Create POM file for the debug APK
-          cat > debug-pom.xml << EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <project xmlns="http://maven.apache.org/POM/4.0.0"
-                   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                   http://maven.apache.org/xsd/maven-4.0.0.xsd">
-              <modelVersion>4.0.0</modelVersion>
-              <groupId>com.tailscale.ipn</groupId>
-              <artifactId>tailscale-debug</artifactId>
-              <version>${VERSION}</version>
-              <packaging>apk</packaging>
-              <name>Tailscale Debug APK</name>
-              <description>Debug build of Tailscale Android app</description>
-          </project>
-          EOF
-          
-          # Upload POM file
-          curl -X PUT \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/xml" \
-            --data-binary @debug-pom.xml \
-            "https://maven.pkg.github.com/${{ github.repository }}/com/tailscale/ipn/tailscale-debug/${VERSION}/tailscale-debug-${VERSION}.pom"
-
-      - name: Create Package Metadata for Release APK
-        if: ${{ github.event_name != 'pull_request' && github.ref != 'refs/heads/main' }}
-        run: |
-          VERSION="${{ steps.version.outputs.version }}-${{ steps.version.outputs.short_sha }}"
-          
-          # Create POM file for the release APK
-          cat > release-pom.xml << EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <project xmlns="http://maven.apache.org/POM/4.0.0"
-                   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                   http://maven.apache.org/xsd/maven-4.0.0.xsd">
-              <modelVersion>4.0.0</modelVersion>
-              <groupId>com.tailscale.ipn</groupId>
-              <artifactId>tailscale-release</artifactId>
-              <version>${VERSION}</version>
-              <packaging>apk</packaging>
-              <name>Tailscale Release APK</name>
-              <description>Release build of Tailscale Android app</description>
-          </project>
-          EOF
-          
-          # Upload POM file
-          curl -X PUT \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/xml" \
-            --data-binary @release-pom.xml \
-            "https://maven.pkg.github.com/${{ github.repository }}/com/tailscale/ipn/tailscale-release/${VERSION}/tailscale-release-${VERSION}.pom"
